--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,17 +3,24 @@ version: "3.9"
 services:
   web:
     build: .
-    command: daphne -b 0.0.0.0 -p 8000 LogInventory.asgi:application
+    command: >
+      sh -c "python manage.py migrate &&
+             daphne -b 0.0.0.0 -p 8000 LogInventory.asgi:application"
     volumes:
       - .:/app
-      - media_data:/app/media
     ports:
       - "8000:8000"
-    env_file:
-      - .env
     depends_on:
       - db
       - redis
+    environment:
+      - DJANGO_SETTINGS_MODULE=LogInventory.settings
+      - PYTHONUNBUFFERED=1
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_HOST=db
+      - POSTGRES_PORT=5432
 
   db:
     image: postgres:15
