--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,12 @@ services:
   web:
     build: .
     command: >
-      sh -c "python manage.py migrate &&
-             daphne -b 0.0.0.0 -p 8000 LogInventory.asgi:application"
+      sh -c "
+        /wait-for-db.sh &&
+        python manage.py migrate &&
+        python manage.py collectstatic --noinput &&
+        daphne -b 0.0.0.0 -p 8000 LogInventory.asgi:application
+        "
     volumes:
       - .:/app
     ports:
