--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,23 +1,23 @@
+upstream django {
+    server web:8000;
+}
+
 server {
     listen 80;
     server_name _;
 
-    # Servir archivos estáticos
     location /static/ {
-        alias /app/staticfiles/;
+        alias /vol/static/;
     }
 
-    # Servir archivos subidos (media)
     location /media/ {
-        alias /app/media/;
+        alias /vol/media/;
     }
 
-    # Proxy para Daphne
     location / {
-        proxy_pass http://web:8000;
+        proxy_pass http://django;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_redirect off;
     }
 }
