--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,58 +1,53 @@
-version: "3.9"
-
 services:
-  web:
-    build: .
-    command: >
-      sh -c "
-        /wait-for-db.sh &&
-        python manage.py migrate &&
-        python manage.py collectstatic --noinput &&
-        daphne -b 0.0.0.0 -p 8000 LogInventory.asgi:application
-        "
-    volumes:
-      - .:/app
-    ports:
-      - "8000:8000"
-    depends_on:
-      - db
-      - redis
-    environment:
-      - DJANGO_SETTINGS_MODULE=LogInventory.settings
-      - PYTHONUNBUFFERED=1
-      - POSTGRES_DB=${POSTGRES_DB}
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_HOST=db
-      - POSTGRES_PORT=5432
-
   db:
     image: postgres:15
-    restart: always
     environment:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    networks:
+      - backend
 
   redis:
     image: redis:7
-    restart: always
+    networks:
+      - backend
+
+  web:
+    build: .
+    command: /wait-for-db.sh daphne -b 0.0.0.0 -p 8000 LogInventory.asgi:application
+    volumes:
+      - .:/app
+      - static_volume:/app/static
+      - media_volume:/app/media
+    env_file: .env
+    depends_on:
+      - db
+      - redis
+    expose:
+      - 8000
+    networks:
+      - backend
 
   nginx:
     image: nginx:latest
     ports:
       - "80:80"
+    volumes:
+      - static_volume:/vol/static
+      - media_volume:/vol/media
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - web
-    volumes:
-      - static_volume:/app/staticfiles
-      - media_volume:/app/media
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    networks:
+      - backend
 
 volumes:
   postgres_data:
-  media_data:
   static_volume:
   media_volume:
+
+networks:
+  backend:
