--- a/.env
+++ b/.env
@@ -1,11 +1,14 @@
-# --- Django ---
+# Django
 DJANGO_SECRET_KEY=django-insecure-0!5sff-zy51at=)uvkz2iwi=lsna4b93vn-c=s$9n5vluccb=!
-DEBUG=False
-DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1,0.0.0.0,37.27.94.127
+DJANGO_DEBUG=True
+DJANGO_ALLOWED_HOSTS=*
 
-# --- Base de datos ---
-POSTGRES_DB=loginventory
-POSTGRES_USER=loginventory_user
-POSTGRES_PASSWORD=supersecurepassword
+# Base de datos
+POSTGRES_DB=log_inventory
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
 POSTGRES_HOST=db
 POSTGRES_PORT=5432
+
+# Redis
+REDIS_URL=redis://redis:6379
