--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,22 +5,26 @@ services:
     build: .
     command: >
       sh -c "python manage.py migrate &&
+             python manage.py collectstatic --noinput &&
              daphne -b 0.0.0.0 -p 8000 LogInventory.asgi:application"
     volumes:
       - .:/app
-    ports:
-      - "8000:8000"
+    expose:
+      - "8000"
     depends_on:
       - db
       - redis
-    environment:
-      - DJANGO_SETTINGS_MODULE=LogInventory.settings
-      - PYTHONUNBUFFERED=1
-      - POSTGRES_DB=${POSTGRES_DB}
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_HOST=db
-      - POSTGRES_PORT=5432
+
+  nginx:
+    image: nginx:latest
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./staticfiles:/app/staticfiles:ro
+      - ./media:/app/media:ro
+    depends_on:
+      - web
 
   db:
     image: postgres:15
