--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
              daphne -b 0.0.0.0 -p 8000 LogInventory.asgi:application"
     volumes:
       - .:/app
+      - static_data:/app/staticfiles 
+      - media_data:/app/media 
     expose:
       - "8000"
     depends_on:
@@ -19,6 +21,7 @@ services:
     image: nginx:latest
     ports:
       - "80:80"
+      - "443:443"
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
       - ./staticfiles:/app/staticfiles:ro
@@ -43,3 +46,4 @@ services:
 volumes:
   postgres_data:
   media_data:
+  static_data:
