--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -4,7 +4,7 @@ server {
     server_name 37.27.94.127; # tu IP o dominio
 
     location /static/ {
-        alias /app/staticfiles/;
+        alias /app/static/;
     }
 
     location /media/ {
