--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -9,6 +9,7 @@ server {
 
     location /media/ {
         alias /app/media/;
+        client_max_body_size 20M;
     }
 
     location / {
@@ -17,5 +18,6 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        client_max_body_size 20M
     }
 }
