--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
 
-    server_name log-inventory.com, www.log-inventory.com;
+    server_name 37.27.94.127; # tu IP o dominio
 
     location /static/ {
         alias /app/staticfiles/;
@@ -18,7 +18,6 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        include proxy_params
         client_max_body_size 20M;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
