--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
 
-    server_name 37.27.94.127; # tu IP o dominio
+    server_name log-inventory.com www.log-inventory.com;
 
     location /static/ {
         alias /app/staticfiles/;
