return to https intead http

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,6 +2,8 @@ server {
     listen 80;
 
     server_name log-inventory.com www.log-inventory.com;
+    
+    return 301 https://$host$request_uri;
 
     location /static/ {
         alias /app/staticfiles/;
