--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,17 +5,19 @@ server {
     listen 80;
     server_name log-inventory.com www.log-inventory.com;
 
-    # Allow Let's Encrypt HTTP-01 verification
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
-        try_files $uri =404;
     }
 
-    # Redirect everything else to HTTPS
     location / {
-        return 301 https://$host$request_uri;
+        proxy_pass http://web:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
+
 
 # ----------------------------
 # HTTPS Server
