--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -4,7 +4,7 @@ server {
 
     # Para certbot (si lo usamos webroot) - carpeta en host: ./certbot/www
     location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
+        alias /var/www/certbot/.well-known/acme-challenge/;
     }
 
     location /static/ {
