--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,11 +1,17 @@
 server {
     listen 80;
     server_name log-inventory.com www.log-inventory.com;
+    return 301 https://$host$request_uri;
+}
 
-    # Para certbot (si lo usamos webroot) - carpeta en host: ./certbot/www
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
+
+
+server {
+    listen 443 ssl;
+    server_name log-inventory.com www.log-inventory.com;
+
+    ssl_certificate /etc/letsencrypt/live/log-inventory.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/log-inventory.com/privkey.pem;
 
     location /static/ {
         alias /app/staticfiles/;
@@ -13,7 +19,6 @@ server {
 
     location /media/ {
         alias /app/media/;
-        client_max_body_size 50M;
     }
 
     location / {
@@ -22,7 +27,6 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
     }
 }
+
