--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -19,6 +19,7 @@ server {
 
     location /media/ {
         alias /app/media/;
+        client_max_body_size 20M;
     }
 
     location / {
@@ -27,6 +28,12 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+
+        client_max_body_size 20M;
+
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+
     }
 }
 
